# AISD_course

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
lab_binTrees/: CMakeLists.txt
lab_binTrees/Dekterev/: binTrees.cpp  binTrees.h
lab_binTrees/Sample/: binTrees.cpp  binTrees.h
lab_binTrees/tests/: Test.cpp
